# tepem

./: .gitignore  .pylintrc  pyproject.toml
jupyter_notebooks/: check_gradient_matrix.ipynb  experiment.ipynb  generate_nozzle_plots.ipynb  mapping.ipynb  plot_cosine.ipynb  plot_re_nozzle.ipynb  q_1_shape_funcs.ipynb  q_4_1_shape_funcs.ipynb  test_elena.ipynb
tepem/: main.py  simulations.py
tepem/backend/: assembling.py  domain.py  expected_solutions.py  high_res_mapping.py  integrals.py  ltg_generator.py  mapping.py  q_1_4_sf.py  q_2_sf.py  visualizer.py
tepem/backend/curve_shapes/: boundary_shapes.py  curves.py  nozzle_dom.py  straight_pipe_dom.py  sudden_change_dom.py  wave_domain.py
tepem/backend/shape_functions/: q_1_2_sf.py  q_1_3_sf.py  q_1_3_sf_cheb.py  q_1_4_sf.py  q_1_4_velo_sf.py  q_1_5_velo_sf.py  q_1_6_velo_sf.py  q_1_7_velo_sf.py  q_1_sf.py  q_2_4_velo_sf.py  q_2_4_velo_sf_cheb.py  q_2_5_velo_sf.py  q_2_5_velo_sf_cheb.py  q_2_6_velo_cheb.py  q_2_6_velo_sf.py  q_3_4_velo_sf.py
