[tool.poetry]
name = "tepem"
version = "0.1.0"
description = ""
authors = ["Erik Weilandt <erik.weilandt+git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
sympy = "^1.12"
matplotlib = "^3.7.2"
pandas = "^2.1.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
